@@ -9,6 +9,9 @@ Version 1.5.0 (2008-??-??)
 
 - Feature: Added CSS for multi-widget which was added in `z3c.form` 2.0.0
 
+- Bug: Changed usage of "template/macros/*" to "macro:*, because the first
+  one doesn't work when we override a form template and use the form macro,
+  registered with this package.
 
 Version 1.4.2 (2008-08-26)
 --------------------------
